src/tests/krate/publish/snapshots/integration__krate__publish__trustpub_gitlab__happy_path_with_fancy_auth_header-2.snap
---
source: src/tests/krate/publish/trustpub_gitlab.rs
expression: response.json()
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "1.1.0",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo/owner_team",
      "owner_user": "/api/v1/crates/foo/owner_user",
      "owners": "/api/v1/crates/foo/owners",
      "reverse_dependencies": "/api/v1/crates/foo/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo/downloads",
      "versions": "/api/v1/crates/foo/versions"
    },
    "max_stable_version": "1.1.0",
    "max_version": "1.1.0",
    "name": "foo",
    "newest_version": "1.1.0",
    "num_versions": 2,
    "recent_downloads": null,
    "repository": null,
    "trustpub_only": false,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
